--- a/style.css
+++ b/style.css
@@ -4,6 +4,22 @@
     background-color: rgb(70, 24, 75)
 }
 
+.button{
+    border: 2px solid #f56a6a; 
+    padding: 1em;
+    border-radius: 25px;
+    color: #f56a6a;
+    background-color: white;
+    font-size: 75%;
+    width: 200px;
+}
+.button:hover{
+    background-image: url("button.jpg");
+    color: white;
+    cursor: pointer;
+    border: 2px solid #f56a6a;   
+}
+
 .nav-desplegable,submenu {
     color: white;
     padding: 12.8px;
