--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     display: grid;
     padding: 7%;
-    background-color: rgb(70, 24, 75)
+    background-color: red;
 }
 
 .button{
@@ -13,6 +13,7 @@
     font-size: 75%;
     width: 200px;
 }
+
 .button:hover{
     background-image: url("button.jpg");
     color: white;
@@ -20,7 +21,7 @@
     border: 2px solid #f56a6a;   
 }
 
-.nav-desplegable,submenu {
+.submenu {
     color: white;
     padding: 12.8px;
     font-size: 16px;
@@ -29,13 +30,14 @@
     width: 100%;
     }
     
-.nav-desplegable, .submenu {
+.submenu {
     position: relative;
-    left : 0;
-    width : 4%;       
-    }
+    left: 70%;
+    width: 30%;
+    display: inline-block;      
+}
 
-.nav-desplegable-content, .submenu-content {
+.submenu-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -44,44 +46,58 @@
     }
     
 
-.nav-desplegable-content li, .submenu-content li {
+.submenu-content li {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     }
     
-.nav-desplegable-content li:hover, .submenu-content li:hover {
+.submenu-content li:hover {
     background-color: #f1f1f1;
 }
     
-.nav-desplegable:hover .nav-desplegable-content, .submenu:hover .submenu-content {
+.submenu:hover .submenu-content {
     display: block;
+    float:left;
+    padding:0 10px;
     }
     
-.nav-desplegable:hover .nav-desplegable-button, .submenu:hover .submenu-button {
+.submenu:hover .submenu-button {
     background-color: #a2ada2;
     }
 
-.seccion0{
-    background-color: black;
-    width: 100%;
-    height: 45%;
-}
 
 .logo{
     display: inline-block;
+    margin-top: -5%;
+    width: 20%;
 }
 
-
-
 .seccion1{
-    background-color: rebeccapurple;
+    background-image: url("pic1.jpg");
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1em;
+    text-transform: capitalize;
+    min-height: 600px;
+    background-color:rgb(255,0,0);
+    opacity:0.6;
 }
 
 .contenido{
     text-align: center;
     justify-content: center;
+}
+
+.contenido h1{
+    color: black;
+    font-size: 4em;
+    text-shadow: 1px 1px white; 
+    text-align: center
 }
 
 .seccion2 { 
@@ -90,16 +106,17 @@
     box-shadow: 1px 1px 0px  rgb(0, 102, 255);
     color: black;
     padding: 10%;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    float: right;
 }
 
 .seccion2 .media, .seccion2 .body { 
     width: 50%;
     display: inline-block;
-    text-align: center;
-}
-
-.seccion2 .media, .seccion2 .body{ 
-    float: right;
+    text-align: left;
+    justify-content: center;
 }
 
 .paralax-background {
@@ -110,17 +127,53 @@
 }
 
 .seccion3{
-    background-color: blue;
-        height: 100vh;
-        background-image: url("pic3.jpg"); 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 1em;
-        text-transform: capitalize;
-        min-height: 600px;
+    height: 70vh;
+    background-image: url("pic3.jpg"); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    text-transform: capitalize;
+    min-height: 600px;
+    overflow: hidden;;
+    color: black;
+    flex-wrap: wrap;
+    float: right;
 }
+
+.topic{
+    width: 50%;
+    display: inline-block;
+    text-align: left;
+    justify-content: right;
+    display: flex;
+    flex-wrap: wrap;
+    color: black;
+    overflow: hidden;
+}
+
+.topic p{
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 30px;
+    text-decoration: black;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.fantasma{
+    display: inline-block;
+}
+
+.seccion3 .fantasma, .seccion3 .topic { 
+    width: 50%;
+    display: inline-block;
+    text-align: left;
+    justify-content: center;
+}
+
 .seccion4{
     display: grid;
     background-color:white;
@@ -146,9 +199,9 @@
     visibility: hidden;
 }
 
-div:hover{
+/*div:hover{
     background-color: plum;
-}
+}*/
 
 .seccion5{
     background-color: yellow;
@@ -198,18 +251,3 @@ div:hover{
     flex-direction: row;
 }
 
-.flex-container-nav li{
-    color: #a8abad;   
-    padding: 1em;
-}
-
-.flex-container-nav ul{
-    width: 95%;
-    list-style: none;
-    display: flex;
-    flex-direction: row-reverse;
-}
-.flex-container-nav{
-    justify-content: right;
-    text-align: right;
-}
