--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ div:hover{
 
 .btn{
     text-align: right;
-    width: 1210px;
+    width: 1200px;
 }
 
 input[type=email]{
@@ -265,27 +265,43 @@ input[type=wish]{
     background: transparent;
 }
 
-
-
-
-
-
 .seccion6{
-    background-color: pink;
+    background-color: white;
+    text-align: center;
+    height: 50vh;
 }
+
+.subs{
+    padding: 5%;
+    padding-top: 9%;
+    color: rgb(102, 99, 99);
+}
+
+.subs h1{
+    font-size: 3em;
+}
+
 .seccion7{
-    background-color: palevioletred;
+    background-color: rgb(32, 32, 32);
     text-align: center;
     justify-content: center;
+    height: 50vh;
+    color: white;
+}
+
+.pie{
+    padding: 5%;
+    padding-top: 9%;
 }
 
 .nav-footer ul li {
     display: inline-block;
-    float: center;
     text-align: center;
     margin-top: 0;
-    font-size: 1em; 
-    justify-content: center;  
+    justify-content: center; 
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.5em; 
 }
 
 .nav-footer ul li a{ 
@@ -314,4 +330,5 @@ input[type=wish]{
     display: flex;
     flex-direction: row;
 }
+
 
