--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     display: grid;
     padding: 7%;
-    background-color: red;
+    background-color: rgb(214, 48, 48);
 }
 
 .button{
@@ -40,33 +40,25 @@
 .submenu-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    }
+}
     
 
 .submenu-content li {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    display: inline-block;
     }
     
 .submenu-content li:hover {
-    background-color: #f1f1f1;
+    color: red;
 }
     
 .submenu:hover .submenu-content {
-    display: block;
-    float:left;
+    display: inline-block;
     padding:0 10px;
-    }
-    
-.submenu:hover .submenu-button {
-    background-color: #a2ada2;
-    }
-
+}
 
 .logo{
     display: inline-block;
